--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "dev-start-db": "nodemon index.js",
-    "dev-start-content": "nodemon index.js",
+    "dev-start-db": "nodemon db.js",
+    "dev-start-content": "nodemon main.js",
     "dev-migrate": "prisma migrate dev --name development",
     "test": "node --test"
   },
@@ -17,6 +17,7 @@
   "type": "commonjs",
   "description": "Task management web app built using Express and PostgreSQL",
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
