--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,9 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
     "lib": ["esnext"],
-    "esModuleInterop": true
+    "module": "node16",
+    "esModuleInterop": true,
+    "moduleResolution": "node16",
+    "paths": {
+      "@prisma": ["./node_modules/@prisma/*"]
+    }
   }
 }
