--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,8 @@
     "moduleResolution": "node16",
     "paths": {
       "@prisma": ["./node_modules/@prisma/*"]
-    }
+    },
+    "noEmit": true,
+    "allowImportingTsExtensions": true
   }
 }
