--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "dev-content-start": "tsx watch main.ts",
+    "dev-auth-start": "tsx watch auth/main.ts",
     "dev-db-start": "tsx watch db/main.ts",
     "dev-db-migrate": "prisma migrate dev --name development",
     "dev-db-test": "node --import tsx --test db/*.test.ts"
@@ -24,6 +25,9 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.5",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
