--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,7 @@
     "lib": ["esnext"],
     "module": "node16",
     "esModuleInterop": true,
-    "moduleResolution": "node16",
+    // "moduleResolution": "node16",
     "paths": {
       "@prisma": ["./node_modules/@prisma/*"]
     },
